# vfs-shadow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
example/: example.rs
example/vfs/: README.md  config.toml  data.json
example/vfs/some dir/: ellie.txt
src/: files.rs  lib.rs
