[package]
name = "vfs-shadow"
version = "0.1.0+0.12"
edition = "2021"
authors = ["Tim 'Piepmatz' Hesse"]
exclude = [".github/"]
repository = "https://github.com/cptpiepmatz/vfs-shadow"
description = "Effortlessly embed a local directory into a vfs."
license = "MIT"
keywords = ["vfs", "virtual-file-system", "macro", "embed"]
categories = ["filesystem", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[[example]]
name = "example"
path = "./example/example.rs"

[dependencies]
proc-macro2 = "1"
proc-macro-error2 = "2"
quote = "1"
syn = "2"
walkdir = "2"
vfs = { version = "0.12", optional = true }

[dev-dependencies]
vfs = "0.12"

[lints.clippy]
pedantic = "warn"
